# ml-encqa

./: .gitignore  ACKNOWLEDGEMENTS.md  LICENSE_DATA  README.md  explore_data.ipynb  pyproject.toml
data/hf/: dataset_info.json  state.json
docs/: index.html
docs/css/: index.css
encqa/: convert_to_dataset.py  enc_qa_dataset.py  enc_qa_dataset_test.py  eval_metrics.py  generate_supplemental_material.py  generate_synthetic.py
encqa/synthetic/: compute_derived_value_exact.py  compute_derived_value_relative.py  correlate_values.py  correlate_values_relative.py  filter_values.py  find_anomaly.py  find_extrema.py  generate_synthetic_chart.py  generate_synthetic_dataset.py  retrieve_value.py  utils.py
